refactor: Centralize template handling and update relationships in models

--- a/admin/streaks/templates/streaks.html
+++ b/admin/streaks/templates/streaks.html
@@ -1,4 +1,4 @@
-{% extends "../../shared/templates/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}User Task Streaks - {{ config.title }}{% endblock %}
 
