--- a/admin/completions/templates/completions.html
+++ b/admin/completions/templates/completions.html
@@ -1,4 +1,4 @@
-{% extends "../../shared/templates/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Task Completions - {{ config.title }}{% endblock %}
 
