--- a/admin/dashboard/templates/dashboard.html
+++ b/admin/dashboard/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "../../shared/templates/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Dashboard - {{ config.title }}{% endblock %}
 
