--- a/admin/scheduled_tasks/templates/scheduled_tasks.html
+++ b/admin/scheduled_tasks/templates/scheduled_tasks.html
@@ -1,4 +1,4 @@
-{% extends "../../shared/templates/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Scheduled Tasks - {{ config.title }}{% endblock %}
 
