--- a/admin/tasks/templates/tasks.html
+++ b/admin/tasks/templates/tasks.html
@@ -1,4 +1,4 @@
-{% extends "../../shared/templates/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Tasks - {{ config.title }}{% endblock %}
 
